...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="310dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
...
            <TextView
                android:id="@+id/textView19"
                android:layout_width="316dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Edit Capacity"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19"
                tools:layout_conversion_absoluteHeight="30dp"
                tools:layout_conversion_absoluteWidth="234dp" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:inputType="number"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18"
                app:strokeColor="@color/red"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/montserrat_semibold"
                android:letterSpacing="0.02"
                android:stateListAnimator="@null"
                android:text="SUBMIT"
                android:textSize="10sp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button7" />

...
