...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/buildName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="SAL"
                android:textColor="#000000"
...
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/textViewCapacity3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewCapacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/montserrat"
                android:text="30"
...
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <Button
                android:id="@+id/capButton"
                android:layout_width="230dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/montserrat_semibold"
...
